添加2005年王江涛范文分析

--- a/2005.md
+++ b/2005.md
@@ -24,7 +24,18 @@ attendance 可能不是这么用的？应该用look after, attend to或者take c
 
 ### 范文
 
-The picture ironically shows that a pitiable old man in rags is being helplessly kicked off by his three sons and a daughter, who all wear decent clothes. The father's negligent children are all guarding their home gates lest their old father "roll into" their households. In other words, they four ignore their moral sense of assuming the responsibility for their old father even though the may be all living a satisfying life. That is a painful scene we often encounter in our daily life.
+参看王江涛151页
+
+这篇文章最大的特点就是中间非常“厚实”，个人认为比较适合学习如何去批判一个观点。这里面想要批判的就是不去照顾父母的行为。从传统文化和道德两个角度出发。
+
++ 从传统文化的角度，写中国自古就有孝敬父母的传统（filial piety这个实在是太牛逼了要是我说估计就是a glorious tradition of loving and respecting elders），然后举了一个（根本没听过的）例子来论证。例子里面有处corporal punishment，不会其实也没啥关系，完全可以用who was sentenced to death或者capital punishment来代替。
++ 从道德角度，一句总说之外还带上两句反诘，从原因上进行论证。好吧其实挺普通的但是字数够了就ok
+
+
+
+### 百度文库范文（选看）
+
+The picture ironically shows that a pitiable old man in rags is being helplessly kicked off by his three sons and a daughter, who all wear decent clothes. The father's negligent children are all guarding their home gates lest their old father "roll into" their households. In other words, they four ignore their moral sense of assuming the responsibility for their old father even though they may be all living a satisfying life. That is a painful scene we often encounter in our daily life.
 
 Sad to say, the moral decline of the younger generations may be a rather explosive situation in our modern society. People definitely have their living conditions improved by wider and wider margins, as evidenced by the four children's decent dressing, but their moral sense still remains sadly unchanged or in some cases becomes dramatically downgrading. Most people might have become too much self-centered, and even worse,  they discard the tradition of giving respect to the elderly. They no longer cares for others, one might even appear stupid or may even be distrusted.
 
@@ -32,10 +43,12 @@ Therefore, we have to take some useful measures to avoid the scene that is menti
 
 ### 范文解析
 
-The picture ironically shows that a pitiable old man in rags is being helplessly kicked off by his three sons and a daughter, who all wear decent clothes. The father's negligent __failed to take care of sth ，用得确实极好__children are all guarding their home gates lest __以免,相当于to avoid, 但注意这是个连词__ their old father "roll into" their households__和house没区别__. In other words, they four ignore their moral sense of assuming the responsibility __take the responsibility 也可以说成是 assume the responsibility__ for their old father even though the may be all living a satisfying life. That is a painful scene we often encounter in our daily life.
+The picture ironically shows that a pitiable old man in rags is being helplessly kicked off by his three sons and a daughter, who all wear decent clothes. The father's negligent __failed to take care of sth ，用得确实极好__children are all guarding their home gates lest __以免,相当于to avoid, 但注意这是个连词__ their old father "roll into" their households__和house没区别__. In other words, they four ignore their moral sense of assuming the responsibility __take the responsibility 也可以说成是 assume the responsibility__ for their old father even though they may be all living a satisfying life. That is a painful scene we often encounter in our daily life.
 
 Sad to say, the moral decline of the younger generations may be a rather explosive situation __表示情况危急：An explosive situation is likely to have difficult, serious, or dangerous effects__ in our modern society. People definitely have their living conditions improved by wider and wider margins __margin表示余量，这句意思是在越来越多的程度上好起来了？__, as evidenced by the four children's decent dressing, but their moral sense still remains sadly unchanged or in some cases becomes dramatically downgrading __滑坡__ . Most people might have become too much self-centered, and even worse,  they discard the tradition of giving respect to the elderly. They no longer cares for others, one might even appear stupid or may even be distrusted.
 
 Therefore, we have to take some useful measures to avoid the scene that is mentioned above. We must launch a variety of campaigns about the return to the good tradition of giving help and love to the elderly. Moreover, we must appeal to our government to establish some relevant laws to punish those who avoid their duties. The last but not the least, our respect for age is an indication of the progress of human society, as imperatives of traditions require__这句没太懂是什么意思？__. We sincerely wish that the old man could be welcome to any of the four households, elegantly dressed, with a smile on face.
 
-范文的描述非常详尽，一些搭配更加得体。思路上采用“提出问题和解决问题”，尽管解决有点生硬，但是模式还是可以套用的。
+一开始还没有买到王江涛的时候抄的，感觉还凑合，但是06年作文百度文库上的范文就不太行了，所以还是买了书...
+
+这篇出彩的地方就是第一段，描述特别细致，然而第二段以后就不太行了，第二段貌似是想将问题推广到更一般的层面，倒是不如分析问题来得容易。
