添加2008年考试分析范文分析

--- a/2008.md
+++ b/2008.md
@@ -41,3 +41,25 @@ __书上也有范文分析，3~6点都非常有帮助。值得仔细看。__ 特
 + deduce from the portrayal that ...从画面中可以看出。这里作者也用了undoubtedly，搞不好这个词已经被用烂了，可以考虑换成别的词，或者写成It is evident that...。但是第二段第一句是非常好的表达“作者想要通过这幅画呼吁...重要性”的方法。
 
 （背下来，这些表达就都是你的啦）
+
+### 考试分析上的范文
+
++ thought provoking 富于启发性的，在05年的范文里面也出现过。
++ crippled，也是跛脚的意思，和lame一起记
++ highlight，表明...的重要性。原本的意思是高亮显示。用在作文里和"we can deduce from the portrayal that the cartoonist is trying to attract our attention to the issue of ..."一个效果
++ behind it lies a life philosophy后面还可以用that引导一个同位语从句，也可以用于引出某个观点
++ a good case in point：一个很典型的例子（a typical example）
++ __for__ the discovery __of__ a novel therapy __against__ malaria，注意这几个介词，很好地体现了语言的多样性
++ come in the wake of: 源自于. in the wake of 是很好的表达原因的方式，逼格比due to或者thanks to高到不知道那里去了。
++ sailed through: survive的被动化说法，适合和crisis，tough time等搭配
++ collective achievements and ultimate success: 阶段性的成就以及最终的成功。可以用来描述“从量变到质变”的过程。也可以说“accumulative/gradual/incremental changes”（或者转换成副词形式）
++ go without saying，毫无疑问。和undoubted, it is evident that换着用
++ databases, strategies and social connections里面的database不知道能不能用，我觉得用data完全就可以替代了，database是很专业的词已经专指数据库了。
++ be rooted in us：根植于我们内心中，类似的还有we should bear in mind that...(我觉得用这一句可以替代王江涛那个we can remind ourselves that those with the spirit of ... are nearer to success)
++ proverb相当于saying或者expression。
+
+第一段只有两句话，一句描述画一句描述标题，长度足够。担心一句写不了那么长的话可以像王江涛的范文里面稍微发挥一下（successfully cracked the hard nut of lameness which...）
+
+第二段第一句话稍显多余，但是第二句能用上united we stand也还是很不错的。之后再详细解释一下也有深化的意思。这一段是通过举例来说明合作确实能够带来成功。宝宝可能会觉得例子不好举，然而，这些例子其实都是很菜的┑(￣Д ￣)┍屠呦呦和SARS的例子其实很万能啊，艰苦奋斗，勇于创新...都可以用，其实例子不需要太恰当（甚至不需要是真的），只要能够写成一句完整的和你要论述的东西相关的话就可以。屠呦呦写了两句已经算是详细论证了(实际上涉及事实的只有第一句，第二句就是套模板，而第一句不是合作的场景也可以用)。所以不用害怕举例子，只要把话说好就可以。（可以联系平常看的时事热点，尝试用英语描述这些例子然后brain storm一下能够用在哪些地方）
+
+上一段“摆事实”，这一段“讲道理”。论证合作能够带来“哪些好处”。好处就是可以共享资源。后面还说了很多和竞争相关的话，觉得自己想不到也没关系，再找几点原因也是可以的嘛，比如说合作让人们拥有更高的效率，创造更多的价值等等。最后这个proverb算是点睛之笔，确实非常恰当，不过非常恰当的能用的地方也就更窄，所以背下来更多的是作为积累即可。对于其他的词句，则在背诵的时候要多考虑如何去变化（或者paraphrase）以增加语言的丰富性
