修改了部分建议

--- a/2019.md
+++ b/2019.md
@@ -38,6 +38,8 @@ overestimate... neglect...这对反义词
 
 making constant efforts这里又想到06年的"endeavor to bridge the gap between ... "，都是“少年仍需努力”的表达
 
+show grace under pressure：表示在压力面前从容不迫。grace本身表示优雅。
+
 ### 手写版
 
 ![](fig/2019_script.jpg)
@@ -53,17 +55,18 @@ __优点：__
 
  __还可以再改进的地方：__
 
-+ 存在的语法问题：第二句的`brings`和`encourages`， 第二段`most great masterpieces`应该为`greatest masterpieces`，后面的`with highly value`可以直接改成invaluable加到masterpieces前面，注意highly是副词，只能修饰动词或者形容词。第三段的`everybody`后面一般不接介词，应该改成`everyone`
++ 存在的语法问题：第二句的`brings`和`encourages`， 第二段`most great masterpieces`应该为`greatest masterpieces`，后面的`with highly value`可以直接改成invaluable加到masterpieces前面，注意highly是副词，只能修饰动词或者形容词。第三段的`everybody`后面一般不接介词，应该改成`everyone`。__关于时态问题，在描述的时候统一用一般现在时即可__
 + 拼写问题：第二句`clares`的c和l有点区分不清,第三句`invalued`应该为`invaluable`，第三段`where there is a will`
 + 第一段的第三句，`The cartonist indicated that the invaluable spirit of persistence`这里，that引导的应该是一个从句，但是invaluable spirit of persistence本身是一个名词的结构。可以考虑把that去掉（第二段的第一句也是同样的问题）；另外实际上当说这个作者怎么样的时候实际上完全可以用现在时（参看2008年关于合作的范文第二段第一句）。这里使用indicate就可以了。最后，这一句和第二段的第一句有点重复，考虑到caption本身比较简单，这一句也可以不要。
 + 关于“坚持”的变种说法，第二段里面多次用到的`insist on`通常是表示坚持某种观点，类似于argue that，这里如果不想用continue了可以换成keep on，never stops
 + `motive power`是否改成motivating power？
 + `be told to`颇有点被动的意味，换成`It is our duty`是不是更好一些呢？
 + 第二段的最后，成功不远了，应该是在前面不远处，而不是后面不远处，所以这里用`ahead`或者`beyond`应该更好一些。
-+ 第三段的最后一句可能是快写完了比较着急，稍微有点牵强；这种时候实在没得可写了可以考虑直接上模板，同样能够完成呼吁的任务而且相对表达比较自然。
++ 第三段的最后一句可能是快写完了比较着急，稍微有点牵强；这种时候实在没得可写了可以考虑直接上模板，同样能够完成呼吁的任务而且相对表达比较自然（不管面对什么困难，有强大毅力的人都不会放弃）。实际上是语言的连贯性问题，可以参考2008年考试分析第二段第三句"in other words, with challenges lying ahead..."。上一段说学生需要努力的时候也是如此，后面其实可以写学生有哪些通过努力获得成功的例子，比如一篇论文写了一个月最后终于通过非常欣慰，一方面是锻炼了自己写作的技能，另一方面也加深了自己对概念的理解。
 
 
 __建议__：
 
 + 背熟范文，熟记好词好句，关注在什么样的情形下可以使用它们
 + 平常阅读和背诵的时候有意识的关注短语的固定搭配问题和词汇的语法特性，培养“语感”
++ 写完之后记得检查一遍。特别是检查有没有单三变化的错误（只要加个s就好啦）。
