--- a/2011.md
+++ b/2011.md
@@ -29,11 +29,15 @@ It is my view that, first and for most, it is our duty to protect environment an
 
 shrug off：相当于neglect或者overlook(不是underlook哦，19年范文里倒是有一个underestimate)。
 
+exert great pressure on: 施加压力也可以用impose。19年有一句imposing tremendous pressure on every individual. 
+
+excessively used: 过度使用。这里也可以用exhausted表示耗尽（虽然意思稍有不同）。这里的ecological system has been disturbed也是很准确的搭配。
+
 shore up：用梁或者柱子支撑某物，这里shore up economy就是支撑起经济发展的意思。
 
 render: render本身有描绘的意思，也有导致的意思，如这里的render development unsustainable，就是导致不可持续发展的意思。
 
-最后呼吁的时候除了only in this way ... 用It is high time也是不错的选择。当然也可以不采用任何句式，只要总结如是去做的好处，也能够实现呼吁的功能。
+最后呼吁的时候除了only in this way ... 用It is high time也是不错的选择。当然也可以不采用任何句式，只要总结如是去做的好处，也能够实现呼吁的功能。注意在It is high time后面跟的是__enhanced__，说明这里要使用__虚拟语气__。
 
 这篇范文相对比较简单，背诵的时候重点关注第二段论证正反两个方面的议论方法。以及最后一句的呼应。
 
